# klines

./: .gitignore  README.md  pyproject.toml
src/klines/: aggregate.py  download.py  normalise.py  pipeline.py  store.py  validate.py
tests/: conftest.py  test_aggregate.py  test_normalise.py  test_pipeline.py  test_store.py  test_validate.py
