[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "klines"
version = "0.1.0"
description = "Fetch, normalise, validate, and aggregate Binance OHLCV klines"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "aiohttp>=3.9",
    "pyarrow>=15",
]

[project.scripts]
binance-fetch = "bin.fetch_data:main"
binance-build = "bin.build_datasets:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/klines", "bin"]

[tool.ruff]
line-length = 100
